create alternative dd meta model

--- a/designs/designs.metamodelalt.edit/plugin.properties
+++ b/designs/designs.metamodelalt.edit/plugin.properties
@@ -34,3 +34,4 @@ _UI_DataFlow_data_feature = Data
 _UI_Data_name_feature = Name
 _UI_Unknown_feature = Unspecified
 
+_UI_DataFlow_name_feature = Name
