modify dfd meta model

--- a/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
+++ b/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
@@ -51,3 +51,4 @@ _UI_CompositeDataType_components_feature = Components
 _UI_Entry_type_feature = Type
 _UI_Entry_name_feature = Name
 _UI_DataType_name_feature = Name
+_UI_CollectionDataType_type_feature = Type
