create basic editors

--- a/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
+++ b/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
@@ -54,3 +54,4 @@ _UI_DataType_name_feature = Name
 _UI_CollectionDataType_type_feature = Type
 _UI_DataFlow_name_feature = Name
 _UI_Data_name_feature = Name
+_UI_Component_equals_feature = Equals
