modify editors and dfd meta model

--- a/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
+++ b/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
@@ -55,3 +55,7 @@ _UI_CollectionDataType_type_feature = Type
 _UI_DataFlow_name_feature = Name
 _UI_Data_name_feature = Name
 _UI_Component_equals_feature = Equals
+_UI_Node_type = Node
+_UI_Edge_type = Edge
+_UI_Node_outgoingDataFlow_feature = Outgoing Data Flow
+_UI_Node_incomingDataFlow_feature = Incoming Data Flow
