refactor dfd meta model

--- a/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
+++ b/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
@@ -59,3 +59,6 @@ _UI_Node_type = Node
 _UI_Edge_type = Edge
 _UI_Node_outgoingDataFlow_feature = Outgoing Data Flow
 _UI_Node_incomingDataFlow_feature = Incoming Data Flow
+_UI_NamedComponent_type = Named Component
+_UI_Node_equals_feature = Equals
+_UI_NamedComponent_name_feature = Name
