modify data dictionary meta model

--- a/designs/org.palladiosimulator.dataflow.dictionary.edit/plugin.properties
+++ b/designs/org.palladiosimulator.dataflow.dictionary.edit/plugin.properties
@@ -32,3 +32,6 @@ _UI_Entry_type_feature = Type
 _UI_Entry_name_feature = Name
 _UI_DataType_name_feature = Name
 _UI_CollectionDataType_type_feature = Type
+_UI_NamedElement_type = Named Element
+_UI_Entity_type = Entity
+_UI_NamedElement_name_feature = Name
