--- a/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
+++ b/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
@@ -62,3 +62,5 @@ _UI_Node_incomingDataFlow_feature = Incoming Data Flow
 _UI_NamedComponent_type = Named Component
 _UI_Node_equals_feature = Equals
 _UI_NamedComponent_name_feature = Name
+_UI_Node_requiringProcesses_feature = Requiring Processes
+_UI_Node_providingProcesses_feature = Providing Processes
