modify dfd meta model with entity and namedelement classes

--- a/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
+++ b/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
@@ -64,3 +64,6 @@ _UI_Node_equals_feature = Equals
 _UI_NamedComponent_name_feature = Name
 _UI_Node_requiringProcesses_feature = Requiring Processes
 _UI_Node_providingProcesses_feature = Providing Processes
+_UI_NamedElement_type = Named Element
+_UI_Entity_type = Entity
+_UI_NamedElement_name_feature = Name
