modify ocl statements and dfd sample

--- a/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
+++ b/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
@@ -67,3 +67,8 @@ _UI_Node_providingProcesses_feature = Providing Processes
 _UI_NamedElement_type = Named Element
 _UI_Entity_type = Entity
 _UI_NamedElement_name_feature = Name
+_UI_DataFlowDiagramRefinement_type = Refinement
+_UI_DataFlowDiagram_nodes_feature = Nodes
+_UI_DataFlowDiagram_edges_feature = Edges
+_UI_DataFlowDiagramRefinement_refinedProcesses_feature = Refined Processes
+_UI_DataFlowDiagramRefinement_refiningDiagram_feature = Refining Diagram
