add external java action, modify custom widget

--- a/designs/org.palladiosimulator.dataflow.ui.table/.project
+++ b/designs/org.palladiosimulator.dataflow.ui.table/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.palladiosimulator.ui.table</name>
+	<name>org.palladiosimulator.dataflow.ui.table</name>
 	<comment></comment>
 	<projects>
 	</projects>
