remove equals property from meta model and add first leveling version

--- a/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
+++ b/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
@@ -72,3 +72,4 @@ _UI_DataFlowDiagram_nodes_feature = Nodes
 _UI_DataFlowDiagram_edges_feature = Edges
 _UI_DataFlowDiagramRefinement_refinedProcesses_feature = Refined Processes
 _UI_DataFlowDiagramRefinement_refiningDiagram_feature = Refining Diagram
+_UI_DataFlowDiagramRefinement_refinedProcess_feature = Refined Process
