add derived relations to meta model

--- a/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
+++ b/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
@@ -73,3 +73,6 @@ _UI_DataFlowDiagram_edges_feature = Edges
 _UI_DataFlowDiagramRefinement_refinedProcesses_feature = Refined Processes
 _UI_DataFlowDiagramRefinement_refiningDiagram_feature = Refining Diagram
 _UI_DataFlowDiagramRefinement_refinedProcess_feature = Refined Process
+_UI_DataFlowDiagramRefinement_precedingProcesses_feature = Preceding Processes
+_UI_DataFlowDiagramRefinement_providingProcesses_feature = Providing Processes
+_UI_DataFlowDiagramRefinement_requiringProcesses_feature = Requiring Processes
