move source and target in meta model

--- a/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
+++ b/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
@@ -76,3 +76,5 @@ _UI_DataFlowDiagramRefinement_refinedProcess_feature = Refined Process
 _UI_DataFlowDiagramRefinement_precedingProcesses_feature = Preceding Processes
 _UI_DataFlowDiagramRefinement_providingProcesses_feature = Providing Processes
 _UI_DataFlowDiagramRefinement_requiringProcesses_feature = Requiring Processes
+_UI_Edge_target_feature = Target
+_UI_Edge_source_feature = Source
