modify meta model and semantic candidates in dfd editor

--- a/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
+++ b/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
@@ -78,3 +78,7 @@ _UI_DataFlowDiagramRefinement_providingProcesses_feature = Providing Processes
 _UI_DataFlowDiagramRefinement_requiringProcesses_feature = Requiring Processes
 _UI_Edge_target_feature = Target
 _UI_Edge_source_feature = Source
+_UI_DataFlowDiagramRefinement_providingNodes_feature = Providing Nodes
+_UI_DataFlowDiagramRefinement_requiringNodes_feature = Requiring Nodes
+_UI_Node_requiringNodes_feature = Requiring Nodes
+_UI_Node_providingNodes_feature = Providing Nodes
