fix df display in leveled dfd

--- a/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
+++ b/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
@@ -82,3 +82,4 @@ _UI_DataFlowDiagramRefinement_providingNodes_feature = Providing Nodes
 _UI_DataFlowDiagramRefinement_requiringNodes_feature = Requiring Nodes
 _UI_Node_requiringNodes_feature = Requiring Nodes
 _UI_Node_providingNodes_feature = Providing Nodes
+_UI_DataFlowDiagram_refiningEdges_feature = Refining Edges
