add edge refinement to meta model; no error

--- a/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
+++ b/designs/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
@@ -83,3 +83,7 @@ _UI_DataFlowDiagramRefinement_requiringNodes_feature = Requiring Nodes
 _UI_Node_requiringNodes_feature = Requiring Nodes
 _UI_Node_providingNodes_feature = Providing Nodes
 _UI_DataFlowDiagram_refiningEdges_feature = Refining Edges
+_UI_EdgeRefinement_type = Edge Refinement
+_UI_DataFlowDiagramRefinement_refinedEdges_feature = Refined Edges
+_UI_EdgeRefinement_refinedEdge_feature = Refined Edge
+_UI_EdgeRefinement_refiningEdges_feature = Refining Edges
