Create additional data flow edge base class.

--- a/bundles/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
+++ b/bundles/org.palladiosimulator.dataflow.diagram.edit/plugin.properties
@@ -87,3 +87,5 @@ _UI_EdgeRefinement_type = Edge Refinement
 _UI_DataFlowDiagramRefinement_refinedEdges_feature = Refined Edges
 _UI_EdgeRefinement_refinedEdge_feature = Refined Edge
 _UI_EdgeRefinement_refiningEdges_feature = Refining Edges
+_UI_DataFlowEdge_type = Data Flow Edge
+_UI_DataFlowEdge_data_feature = Data
