--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,6 @@
 		<module>releng</module>
 		<module>bundles</module>
 		<module>features</module>
+		<module>tests</module>
 	</modules>
 </project>
